--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -84,7 +84,7 @@
             ready() {
                 super.ready();
 
-                // ambient audio for pregame.
+                // ambient audio for pregame, pause on blur?
                 let bgsound = new Audio('/resources/sound/background.mp3');
                 bgsound.loop = true;
 
