--- a/prototype/website/src/game-app/app-toolbar.html
+++ b/prototype/website/src/game-app/app-toolbar.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 <!--
     @author Robin Duda
@@ -37,15 +38,38 @@
                 cursor: pointer;
             }
 
+            #banner {
+                text-align: center;
+                padding: 11.5px;
+            }
+
+            .banner-text {
+                font-size: 12px;
+                margin: auto;
+                display: block;
+            }
+
         </style>
 
         <paper-material class="header" elevation="3">
-            <iron-icon icon="icons:home" on-down="_home"></iron-icon>
+            <template is="dom-if" if="[[website]]">
+                <iron-icon icon="icons:home" on-down="_home"></iron-icon>
+            </template>
 
             <template is="dom-if" if="[[loggedin]]">
                 <iron-icon style="float:right;" icon="icons:close" on-down="_logout"></iron-icon>
             </template>
+
+
+            <template is="dom-if" if="[[_banner(banner)]]">
+                <div id="banner">
+                    <span class="banner-text">[[banner.text]]</span>
+                </div>
+            </template>
+
         </paper-material>
+
+        <iron-ajax auto url="src/data/banner.json" handle-as="json" last-response="{{banner}}"></iron-ajax>
 
     </template>
     <script>
@@ -57,6 +81,8 @@
 
             ready() {
                 super.ready();
+                this.website = !window.isPWA;
+                this.banner = {};
 
                 application.onAuthentication(() => {
                     this.loggedin = true;
@@ -67,11 +93,18 @@
                 });
             }
 
+            _banner() {
+                return !!(this.banner.text);
+            }
+
             _home() {
                 application.view('start-page');
             }
 
             _logout() {
+                if (window.isPWA) {
+                    document.exitFullscreen();
+                }
                 application.logout();
             }
         }
