--- a/prototype/website/src/game-app/app-view.html
+++ b/prototype/website/src/game-app/app-view.html
@@ -10,6 +10,7 @@
 <link rel="import" href="game-view.html">
 <link rel="import" href="patch-download.html">
 <link rel="import" href="error-dialog.html">
+<link rel="import" href="offline-view.html">
 
 <link rel="import" href="../style/theme.html">
 
@@ -65,6 +66,10 @@
 
             <div id="start-page">
                 <start-page class="layout horizontal center-justified"/>
+            </div>
+
+            <div id="offline-view">
+                <offline-view class="layout horizontal center-justified"/>
             </div>
         </iron-pages>
 
