--- a/prototype/website/src/game-app/start-page.html
+++ b/prototype/website/src/game-app/start-page.html
@@ -35,6 +35,13 @@
                 display: block;
             }
 
+            .install-link {
+                display: block;
+                text-align: center;
+                padding: 16px;
+                font-size: 12px;
+            }
+
         </style>
 
         <paper-material class="container center-box" elevation="3">
@@ -63,8 +70,10 @@
                 </div>
             </iron-pages>
 
+            <template is="dom-if" if="[[installable]]">
+                <a href="#" class="install-link" on-click="_install">install to desktop</a>
+            </template>
             <paper-button raised class="primary flex" on-tap="start">ENTER GAME</paper-button>
-            <a href="#" on-click="_install">install</a>
         </paper-material>
     </template>
     <script>
@@ -76,7 +85,15 @@
 
             ready() {
                 super.ready();
+                this.installable = !!(window.pwa);
                 this.page = 0;
+
+                console.log(this.installable);
+
+                application.subscribe('installed', installed => {
+                    console.log('installed event: ' + this.installable);
+                    this.set('installable', !!window.pwa);
+                });
             }
 
             start() {
@@ -84,30 +101,16 @@
             }
 
             _install() {
-                /*window.addEventListener('load', () => {
-                    let btnAdd = document.getElementById('add');
-
-                    // Installation must be done by a user gesture! Here, the button click
-                    btnAdd.addEventListener('click', (e) => {*/
-
-                        console.log('DING');
-
-                        // hide our user interface that shows our A2HS button
-                      /*  btnAdd.style.display = 'none';*/
-                        // Show the prompt
-                        window.pwa.prompt();
-                        // Wait for the user to respond to the prompt
-                        window.pwa.userChoice
-                            .then((choiceResult) => {
-                                if (choiceResult.outcome === 'accepted') {
-                                    console.log('User accepted the A2HS prompt');
-                                } else {
-                                    console.log('User dismissed the A2HS prompt');
-                                }
-                                window.pwa = null;
-                            });
-                    /*});
-                });*/
+                window.pwa.prompt();
+                window.pwa.userChoice
+                    .then((choiceResult) => {
+                        if (choiceResult.outcome === 'accepted') {
+                            console.log('User accepted the A2HS prompt');
+                        } else {
+                            console.log('User dismissed the A2HS prompt');
+                        }
+                        window.pwa = null;
+                    });
             }
         }
 
