show login and hide home navigation on pwa installation.

--- a/prototype/website/src/game-app/app-toolbar.html
+++ b/prototype/website/src/game-app/app-toolbar.html
@@ -85,8 +85,12 @@
 
             ready() {
                 super.ready();
-                this.website = !window.isPWA;
+                this.website = !(window.isPWA);
                 this.banner = {};
+
+                application.subscribe('installed', installed => {
+                    this.website = !installed;
+                });
 
                 application.onAuthentication(() => {
                     this.loggedin = true;
