show offline-view on realm disconnect + unregister input on error.

--- a/prototype/website/src/game-app/offline-view.html
+++ b/prototype/website/src/game-app/offline-view.html
@@ -39,7 +39,7 @@
 
         <paper-material class="container center-box" id="container" elevation="3">
             <div class="title">
-                <h4>Offline</h4>
+                <h4>Server offline</h4>
             </div>
 
             <mega-loader class="loader" text="Connecting.." enabled="[[connecting]]"></mega-loader>
