add user-select: none to game ui to prevent accidental selection.

--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -234,7 +234,7 @@
 
         </style>
 
-        <div class="container">
+        <div class="container noselect">
 
             <div hidden="[[naming]]">
                 <div class="realm-title">
