--- a/prototype/website/src/game-app/character-list.html
+++ b/prototype/website/src/game-app/character-list.html
@@ -108,7 +108,7 @@
             }
         </style>
 
-        <paper-material class="container center-box" elevation="3">
+        <paper-material class="container center-box noselect" elevation="3">
 
             <div hidden="[[create]]">
                 <div class="realm-title">
