--- a/prototype/website/src/game-app/realm-list.html
+++ b/prototype/website/src/game-app/realm-list.html
@@ -198,7 +198,7 @@
             }
         </style>
 
-        <paper-material class="container center-box" elevation="3">
+        <paper-material class="container center-box noselect" elevation="3">
 
 
             <paper-tabs id="tabs" selected="{{page}}" no-slide link>
