--- a/prototype/website/src/game-app/ui/game-menu.html
+++ b/prototype/website/src/game-app/ui/game-menu.html
@@ -45,7 +45,7 @@
             }
 
             _characters(e) {
-                game.scriptShutdown();
+                game.shutdown();
                 application.scriptShutdown();
                 application.showCharacters();
             }
