--- a/prototype/website/src/game-app/ui/player-status.html
+++ b/prototype/website/src/game-app/ui/player-status.html
@@ -170,7 +170,7 @@
         </style>
 
 
-        <paper-material elevation="3" id="frame" class="interface-box">
+        <paper-material elevation="3" id="frame" class="interface-box noselect">
             <span class="level">[[character.stats.level]]</span>
             <span class="name">[[character.name]]</span>
 
