restart background sound from zero on resume pregame.

--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -101,6 +101,7 @@
                 application.onScriptShutdown(() => {
                     // play in pregame ui.
                     if (this.bgsound) {
+                        this.bgsound.currentTime = 0;
                         this.bgsound.play();
                     }
                 });
