--- a/prototype/website/src/game-app/ui/game-dialog.html
+++ b/prototype/website/src/game-app/ui/game-dialog.html
@@ -98,13 +98,13 @@
 
         <div id="container">
             <div class="overlay"></div>
-                <paper-material elevation="3" class="interface-box" id="dialog">
+                <paper-material elevation="3" class="interface-box noselect" id="dialog">
                     <iron-icon icon="icons:close" id="dialog-close" on-down="_stop"></iron-icon>
 
                     <span class="dialog-entity">[[entity]]</span>
                     <span class="dialog-text">[[text]]</span>
 
-                    <ul class="dialog-option-list noselect">
+                    <ul class="dialog-option-list">
                         <template is="dom-repeat" items="[[lines]]" as="line">
                             <li><span class="dialog-option" on-down="_select">[[_parse(line.text)]]</span></li>
                         </template>
