remove autofocus from chat-box input.

--- a/prototype/website/src/game-app/ui/chat-box.html
+++ b/prototype/website/src/game-app/ui/chat-box.html
@@ -85,8 +85,7 @@
                 </ul>
             </div>
             <paper-input value="{{message}}" id="message" class="input" maxlength="60" placeholder="message"
-                         on-keydown="submit"
-                         autofocus></paper-input>
+                         on-keydown="submit"></paper-input>
         </paper-material>
     </template>
     <script>
