Fix resource case sensitivity for unix servers.

--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -309,7 +309,7 @@
                     <paper-material elevation="0" class="character-class">
 
                         <template is="dom-if" if="[[selected]]">
-                            <img src="{{realm.resources}}/gui/class/{{selected.name}}.svg"
+                            <img src="{{realm.resources}}/gui/class/{{selected.id}}.svg"
                                  class="selected-class-image">
                         </template>
 
