added noselect class to loot-dialog.

--- a/prototype/website/src/game-app/ui/loot-dialog.html
+++ b/prototype/website/src/game-app/ui/loot-dialog.html
@@ -87,7 +87,7 @@
         <div id="container">
             <div id="overlay"></div>
 
-            <paper-material elevation="3" class="interface-box" id="dialog">
+            <paper-material elevation="3" class="interface-box noselect" id="dialog">
                 <iron-icon icon="icons:close" id="dialog-close" on-down="_stop"></iron-icon>
 
                 <span class="dialog-entity">[[target.name]]</span>
