--- a/prototype/website/src/game-app/realm-list.html
+++ b/prototype/website/src/game-app/realm-list.html
@@ -26,84 +26,13 @@
         <style>
             :host {
                 display: block;
-            }
-
-            paper-button {
-                text-align: left;
+                padding-top: 128px;
             }
 
             .container {
                 width: 80%;
                 max-width: 825px;
-                margin-top: 128px;
                 display: block;
-            }
-
-            .titles {
-                width: 100%;
-                margin-top: 12px;
-            }
-
-            .name-title {
-                margin-left: 8px;
-                width: 36%;
-                float: left;
-                margin-top: 6px;
-            }
-
-            .name {
-                margin-left: 20px;
-                width: 34%;
-                float: left;
-                margin-top: 6px;
-            }
-
-            .type {
-                width: 12%;
-                float: left;
-                margin-top: 6px;
-            }
-
-            .reset {
-                width: 14%;
-                float: left;
-                margin-top: 6px;
-                padding-left: 0px;
-            }
-
-            .players {
-                width: 18%;
-                float: left;
-                margin-top: 6px;
-            }
-
-            .ping {
-                width: 7%;
-                float: left;
-                margin-top: 6px;
-                padding-left: 0px;
-            }
-
-            .info {
-                margin-top: 6px;
-            }
-
-            .description {
-                font-size: 0.85em;
-            }
-
-            .item {
-                text-align: center;
-                position: relative;
-                display: inline-block;
-                width: 100%;
-                cursor: pointer;
-            }
-
-            .status {
-                position: relative;
-                height: 32px;
-                width: 100%;
             }
 
             .description {
@@ -139,14 +68,11 @@
                 background-color: #000;
             }
 
-            .realm-favorite {
+            .realm-icon {
                 color: #ff0000;
-                float: left;
-                padding-right: 8px;
-                margin-top: -4px;
             }
 
-            .realm-favorite:hover {
+            .realm-icon:hover {
                 color: #ff0000;
                 cursor: default;
             }
@@ -155,42 +81,17 @@
                 color: var(--text-primary-color);;
             }
 
-            .realm-description {
-                display: inline;
-            }
-
-            .list {
-                padding-bottom: 12px;
-            }
-
             .loader {
                 margin-top: 96px;
             }
 
-            @media (max-width: 632px) {
+            @media (max-width: 728px) {
+                :host {
+                    padding-top: 40px;
+                }
+
                 .container {
                     width: 100%;
-                    margin-top: 46px;
-                }
-
-                .realm-favorite {
-                    width: 16px;
-                    margin-top: -2px;
-                }
-
-                .name-title {
-                    width: 46%;
-                }
-
-                .players {
-                    width: 24%;
-                    text-align: left;
-                    padding-left: 0px;
-                }
-
-                .name {
-                    width: 46%;
-                    text-align: left;
                 }
 
                 .type {
@@ -200,18 +101,44 @@
                 .reset {
                     display: none;
                 }
-
-                .info {
-                    display: none;
-                }
             }
+
+            .realm-table {
+                text-align: center;
+                width: 100%;
+            }
+
+            .realm-items {
+                cursor: pointer;
+            }
+
+            .realm-items:hover {
+                background-color: #ffffff32;
+            }
+
+            .realm-item {
+                padding: 12px;
+            }
+
+            .tooltip-area {
+                display: inline;
+            }
+
+            th, td {
+                padding: 0;
+            }
+            table {
+                border-collapse: collapse;
+                border-spacing: 0;
+            }
+
         </style>
 
         <paper-material class="container center-box noselect" elevation="3">
 
 
             <paper-tabs id="tabs" selected="{{page}}" no-slide link>
-                <paper-tab on-down="trusted">Development</paper-tab>
+                <paper-tab on-down="trusted">Game Worlds</paper-tab>
                 <!--<paper-tab on-down="untrusted">Public</paper-tab>-->
             </paper-tabs>
 
@@ -220,60 +147,87 @@
                     provided by &trade;.</h5>
             </div>
 
-            <div class="titles">
-                <paper-button class="name-title" on-down="order" data-args="name">Name</paper-button>
-                <paper-button class="type" on-down="order" data-args="type">Type</paper-button>
-                <paper-button class="reset" on-down="order" data-args="lifetime">Reset</paper-button>
-                <paper-button class="players" on-down="order" data-args="players">Players</paper-button>
-                <paper-button class="ping" on-down="order" data-args="ping">Ping</paper-button>
-            </div>
+            <template is="dom-if" if="[[loading]]">
+                <mega-loader class="loader" text="Loading realms.." enabled="[[loading]]"></mega-loader>
+            </template>
 
-            <mega-loader class="loader" text="Loading realms.." enabled="[[loading]]"></mega-loader>
+            <template is="dom-if" if="[[!loading]]">
+                <table class="realm-table">
+                    <tr class="realm-header">
+                        <th></th>
+                        <th>
+                            <paper-button on-down="order" data-args="name">Name</paper-button>
+                        </th>
+                        <th class="type">
+                            <paper-button on-down="order" data-args="type">Type</paper-button>
+                        </th>
+                        <th class="reset">
+                            <paper-button on-down="order" data-args="lifetime">Reset</paper-button>
+                        </th>
+                        <th>
+                            <paper-button on-down="order" data-args="players">Players</paper-button>
+                        </th>
+                        <th>
+                            <paper-button on-down="order" data-args="ping">Ping</paper-button>
+                        </th>
+                        <th></th>
+                    </tr>
 
-            <div class="list">
-                <template is="dom-repeat" items="{{realms}}" as="realm" sort="{{sort}}">
-                    <paper-material class="item noselect status" on-tap="select" hidden="{{realm.hidden}}"
-                                    elevation="0">
-                        <paper-ripple></paper-ripple>
-                        <div class="name">
+                    <template is="dom-repeat" items="[[realms]]" as="realm" sort="[[sort]]">
+                        <tr class="realm-items" onmousedown$="select([[index]])">
+                            <td class="realm-item">
+                            <span class="icons">
+                                <template is="dom-if" if="{{favourite(realm.node)}}">
+                                    <div class="tooltip-area">
+                                        <iron-icon icon="icons:favorite-border" class="realm-icon">
+                                        </iron-icon>
+                                        <paper-tooltip animation-delay="0" class="tooltip">
+                                                <span class="description">Public world.</span>
+                                        </paper-tooltip>
+                                    </div>
+                                </template>
 
-                            <template is="dom-if" if="{{favourite(realm.node)}}">
-                                <iron-icon icon="icons:favorite-border" class="realm-favorite">
-                                </iron-icon>
-                            </template>
-
-                            <template is="dom-if" if="{{realm.secure}}">
-                                <iron-icon icon="icons:lock-outline" class="realm-favorite">
-                                </iron-icon>
-                            </template>
-
-                            {{realm.node}}
-                        </div>
-                        <div class="type">[[realm.attributes.type]]</div>
-                        <div class="reset">[[realm.attributes.lifetime]]</div>
-                        <div class$="players {{realm.populationColor}}">
-                            [[realm.players]]
-                            <!-- show this in tooltip? [[realm.size]]-->
-                        </div>
-
-                        <div class$="ping {{realm.pingColor}}">{{realm.ping}}</div>
-
-                        <div class="realm-description">
-                            <iron-icon class="info" icon="icons:info-outline"></iron-icon>
-                            <paper-tooltip animation-delay="0" class="tooltip">
-                                <span class="description">[[realm.attributes.description]]</span>
-                            </paper-tooltip>
-                        </div>
-                    </paper-material>
-                </template>
-            </div>
-
+                                <template is="dom-if" if="{{realm.secure}}">
+                                    <div class="tooltip-area">
+                                        <iron-icon icon="icons:lock-outline" class="realm-icon">
+                                        </iron-icon>
+                                        <paper-tooltip animation-delay="0" class="tooltip">
+                                            <span class="description">Secure connection.</span>
+                                        </paper-tooltip>
+                                    </div>
+                                </template>
+                            </span>
+                            </td>
+                            <td class="realm-item">[[realm.node]]</td>
+                            <td class="realm-item type">[[realm.attributes.type]]</td>
+                            <td class="realm-item reset">[[realm.attributes.lifetime]]</td>
+                            <td class="realm-item">
+                            <span class$="{{realm.populationColor}}">
+                                [[realm.players]]
+                            </span>
+                            </td>
+                            <td class="realm-item">
+                                <span class$="{{realm.pingColor}}">{{realm.ping}}</span>
+                            </td>
+                            <td>
+                                <iron-icon class="info" icon="icons:info-outline"></iron-icon>
+                                <paper-tooltip animation-delay="0" class="tooltip">
+                                    <span class="description">[[realm.attributes.description]]</span>
+                                </paper-tooltip>
+                            </td>
+                        </tr>
+                    </template>
+                </table>
+            </template>
         </paper-material>
-
     </template>
 </dom-module>
 
 <script>
+    // scope hack to make onclick work in tables.
+    let select = (e) => {
+    };
+
     class RealmList extends Polymer.GestureEventListeners(Polymer.Element) {
 
         static get is() {
@@ -286,6 +240,7 @@
             this.realms = [];
             this.trustedservers = true;
             this.set("sort", this.favoriteSort.bind(this));
+            select = this.select.bind(this);
 
             application.subscribe('view', (view) => {
                 if (view === RealmList.is) {
@@ -392,11 +347,7 @@
             this.set("realms", this.realms);
 
             if (application.development.selectFirstRealm) {
-                this.select({
-                    model: {
-                        realm: this.realms[0]
-                    }
-                });
+                this.select(0);
             }
         }
 
@@ -528,9 +479,9 @@
             }
         }
 
-        select(event) {
+        select(index) {
             clearInterval(this.timer);
-            application.selectRealm(event.model.realm);
+            application.selectRealm(this.realms[index]);
         }
     }
 
